--- a/beEx/src/main/AndroidManifest.xml
+++ b/beEx/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+    <!--
+    android:theme="@style/Theme.Sherlock" >
+    -->
         <activity
             android:name="com.bedroid.beEx.MailItemListActivity"
             android:label="@string/app_name" >
