--- a/beEx/src/main/AndroidManifest.xml
+++ b/beEx/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.AppCompat.Light" >
     <!--
-    android:theme="@style/Theme.Sherlock" >
+    android:theme="@style/Theme.Sherlock" AppTheme >
     -->
         <activity
             android:name="com.bedroid.beEx.MailItemListActivity"
