--- a/beEx/src/main/AndroidManifest.xml
+++ b/beEx/src/main/AndroidManifest.xml
@@ -13,9 +13,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light" >
-    <!--
-    android:theme="@style/Theme.Sherlock" AppTheme >
-    -->
+
+        <!-- android:theme="@style/Theme.Sherlock" AppTheme > -->
         <activity
             android:name="com.bedroid.beEx.MailItemListActivity"
             android:label="@string/app_name" >
@@ -32,6 +31,15 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MailItemListActivity" />
+        </activity>
+        <activity
+            android:name="com.bedroid.beEx.SettingsActivity"
+            android:label="@string/title_activity_settings" >
+        </activity>
+        <activity
+            android:name="com.bedroid.beEx.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
     </application>
 
