auth service begin

--- a/beEx/src/main/AndroidManifest.xml
+++ b/beEx/src/main/AndroidManifest.xml
@@ -41,6 +41,17 @@
             android:label="@string/title_activity_login"
             android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
+
+        <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+
+        <service android:name="authsync.AuthenticationService">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+            <meta-data android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
+
     </application>
 
 </manifest>
