--- a/beEx/build.gradle
+++ b/beEx/build.gradle
@@ -25,4 +25,6 @@ android {
 dependencies {
 	compile 'com.android.support:support-v4:18.0.0'
 	compile 'com.android.support:appcompat-v7:18.0.+'
+    compile 'commons-httpclient:commons-httpclient:3.1'
+    compile 'microsoft.exchange:microsoft.exchange:1.2'
 }
