--- a/beEx/build.gradle
+++ b/beEx/build.gradle
@@ -23,8 +23,8 @@ android {
 }
 
 dependencies {
-	compile 'com.android.support:support-v4:18.0.0'
-	compile 'com.android.support:appcompat-v7:18.0.+'
+    compile 'com.android.support:support-v4:18.0.0'
+    compile 'com.android.support:appcompat-v7:18.0.+'
     compile 'commons-httpclient:commons-httpclient:3.1'
-    compile 'microsoft.exchange:microsoft.exchange:1.2'
+    compile files('libs/EWSJavaAPI_1.2.jar')
 }
