--- a/beEx/build.gradle
+++ b/beEx/build.gradle
@@ -25,6 +25,9 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:18.0.0'
     compile 'com.android.support:appcompat-v7:18.0.+'
-    compile 'commons-httpclient:commons-httpclient:3.1'
-    compile files('libs/EWSJavaAPI_1.2.jar')
+    compile files('libs/jwebservices-2.0.jar')
+    //compile files('libs/EWSJavaAPI_1.2.jar')
+    //compile 'commons-httpclient:commons-httpclient:3.1'
+
+
 }
