--- a/beEx/build.gradle
+++ b/beEx/build.gradle
@@ -25,9 +25,11 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:18.0.0'
     compile 'com.android.support:appcompat-v7:18.0.+'
-    compile files('libs/jwebservices-2.0.jar')
-    //compile files('libs/EWSJavaAPI_1.2.jar')
-    //compile 'commons-httpclient:commons-httpclient:3.1'
 
+    compile files('libs/commons-httpclient-3.1.jar')
+    compile files('libs/EWJSJavaAPI_1.2.jar')
+    //compile files('libs/commons-codec-1.8.jar')
 
+    //compile files('libs/commons-logging-1.1.3.jar')
+    //compile files('libs/jcifs-1.3.17.jar')
 }
