--- a/beEx/build.gradle
+++ b/beEx/build.gradle
@@ -23,13 +23,13 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:18.0.0'
+    compile 'com.android.support:support-v4:18.0.+'
     compile 'com.android.support:appcompat-v7:18.0.+'
 
-    compile files('libs/commons-httpclient-3.1.jar')
+    //compile files('libs/commons-httpclient-3.1.jar')
     compile files('libs/EWJSJavaAPI_1.2.jar')
-    //compile files('libs/commons-codec-1.8.jar')
 
+    //compile files('libs/commons-codec-1.8.jar')
     //compile files('libs/commons-logging-1.1.3.jar')
     //compile files('libs/jcifs-1.3.17.jar')
 }
