--- a/beEx/src/main/AndroidManifest.xml
+++ b/beEx/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
 
         <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
 
-        <service android:name="com.bedroid.beEx.authsync.AuthenticationService">
+        <service android:name="authsync.AuthenticationService">
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
